@@ -7,6 +7,8 @@ git-annex (5.20140518) UNRELEASED; urgency=medium
   * initremote/enableremote: Basic support for using with regular git remotes;
     initremote stores the location of an already existing git remote,
     and enableremote setups up a remote using its stored location.
+  * webapp: Support for enabling known git repositories on ssh servers.
+    The repository must have been added using initremote.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 19 May 2014 15:59:25 -0400
 
